# nfl-sos-ratings

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
nfl_sos_ratings/: __init__.py  config.py  data_loader.py  main.py  opponent_stats.py  ratings.py  team_stats.py  visualize.py
tests/: conftest.py  test_data_loader.py  test_main.py  test_ratings.py  test_team_and_opponent_stats.py  test_visualize.py
