[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "nfl-sos-ratings"
version = "0.1.0"
description = "NFL Strength of Schedule Ratings"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["stats", "sports", "football", "machine learning"]
authors = [{ name = "Mitch Avis", email = "mitchavis@gmail.com" }]
license = { text = "MIT" }
dependencies = ["nflreadpy", "polars", "matplotlib", "seaborn"]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-cov>=5"]

classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/mitch-avis/nfl-sos-ratings"

[tool.hatch.build.targets.wheel]
packages = ["nfl_sos_ratings"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear rules
    "C4",  # flake8-comprehensions rules
    "D",   # pydocstyle rules
    "E",   # pycodestyle errors
    "F",   # pyflakes rules
    "I",   # isort rules
    "N",   # pep8-naming rules
    "S",   # bandit security rules
    "SIM", # flake8-simplify rules
    "UP",  # pyupgrade rules
    "W",   # pycodestyle warnings
    "NPY", # numpy docstring rules
    "PGH", # pygrep-hooks rules
]
ignore = [
    "D203", # Conflicts with D211 (no-blank-line-before-class)
    "D213", # Conflicts with D212 (multi-line-summary-first-line)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"] # Tests use asserts and do not need docstrings

[tool.ruff.lint.isort]
known-first-party = ["nfl_sos_ratings"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = [
    "-ra",                       # show extra summary for (s)kipped, (x)failed
    "--strict-markers",
    "--cov=nfl_sos_ratings",
    "--cov-report=term-missing",
]
filterwarnings = ["ignore::DeprecationWarning"]
pythonpath = ["."]

[tool.coverage.run]
branch = true
source = ["nfl_sos_ratings"]


[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = ["pragma: no cover", "if __name__ == \"__main__\":"]
